# AGENTS

./: .gitignore  JIRA_IMPORT.csv  Marketing.md  OLD.md  Orchestrator.md  PROCESS_ARCHITECTURE.md  google_adk.py  marketing_landscape_adk.py  marketing_research_adk.py  pyproject.toml  run_marketing_workflow.py
competitive_analysis/: competitive_analysis_20251230_185030.json  competitive_analysis_20260102_101700.json  uvp_proposals_20251230_185030.json  uvp_proposals_20260102_101700.json
competitors/: Alba_Robot_Srl_20251230.json  BOB_Robotics_Srl_20251230.json  Eco_Power_Solutions_Srl_20251230.json  Kemcomm_Srl_20251230.json  Pulingross_Srl_20251230.json  TOD_System_Srl_20251230.json  W0W_Srl_PUDU_Italy_20251230.json
